crud api for product

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,1 +1,4 @@
+#MONGODB_URI = mongodb+srv://navsingh3211:Atpl%40123%23@cluster0.j4wbwjl.mongodb.net/shopping
+MONGODB_URI = mongodb+srv://navsingh32:Atpl%40123%23@cluster0.xfuvx7j.mongodb.net/shopping
+
 PORT=4000
